# ai-knowledge-base

./: .dockerignore  .env.docker  .env.example  .gitignore  API_TECHNICAL_DOCUMENTATION.md  CLOUDFLARE_TUNNEL_SETUP.md  DOCKER_COMPOSE_GUIDE.md  DOCKER_USAGE.md  Dockerfile  IMPROVEMENTS.md  MIGRATION.md  MIGRATION_PLAN.md  Makefile  PC_MIGRATION_CHECKLIST.md  PORTAINER.md  README.md  SUMMARY.md  check_errors.py  check_failed.py  docker-compose-from-registry.yml  docker-compose.dev.yml  docker-compose.from-registry.yml  docker-compose.local-builld.yml  docker-compose.yml  docker-compose.yml.corrupted-backup  docker-helper.ps1  docker-helper.sh  init_db.sql  main.py  openapi-chatgpt-action.yaml  purge.py  pyproject.toml
.github/workflows/: docker-build.yml
api-reference/: CONTENT_QUALITY_ANALYSIS.md  CONTENT_VERIFICATION_REPORT.md  QUERY_IMPROVEMENTS.md  QUERY_TEST_ANALYSIS.md  QUICK_START.md  README.md  SPEED_COMPARISON.md  direct_search.py
data/: pipeline.db
services/api/: .dockerignore  .env.example  Dockerfile  PRODUCTION_CHECKLIST.md  README.md  REFACTORING_NOTES.md  main.py  main_refactored.py  pyproject.toml
services/ingest/: DOCLING.md  Dockerfile  check_errors.py  main.py  purge.py  pyproject.toml  reset_stuck_files.py
services/ingest/src/: __init__.py  config.py  database.py  database.py.sqlite-backup  docling_processor.py  drive_sync.py  indexer.py  processor.py
src/: config.py  database.py  drive_sync.py  indexer.py  processor.py  utils.py
test/custom-gpt/: TODO.md
test/custom-gpt/docs/: Feedback útmutató.md  Hogyan írjunk célt.md  Peula sablon.md  Peula írás szakaszai.md
test/custom-gpt/peula-gpts/: CGPT1.md  CGPT2.md  CGPT3.md  CGPT4.md  Prompt.md  README.md
