[project]
name = "ai-knowledge-base-ingest"
version = "0.1.0"
description = "AI Knowledge Base Ingest Pipeline: Drive → S3 → Unstructured → OpenAI Vector Store"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.58",
    "google-api-python-client>=2.185.0",
    "google-auth>=2.41.1",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "openai>=2.6.1",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.1.1",
    "tqdm>=4.66.0",
    "unstructured[pdf,docx,pptx]>=0.18.15",
    "python-docx>=1.1.0",
    "lxml>=5.1.0",
]
